Fix layout bug on player win ratio list

--- a/app/assets/stylesheets/players/_show.scss
+++ b/app/assets/stylesheets/players/_show.scss
@@ -25,16 +25,17 @@
   font-size: modular-scale(2);
 
   dt, dd {
-    width: 50%;
     float: left;
     margin: 0;
     text-align: center;
   }
 
   dt {
+    width: 80%;
   }
 
   dd {
+    width: 20%;
   }
 }
 
